--- a/src/app.html
+++ b/src/app.html
@@ -3,11 +3,21 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="description" content="" />
-		<link rel="icon" href="%svelte.assets%/favicon.png" />
+		<link rel="icon" href="%svelte.assets%/assets/manifest-icon-192.maskable.png" />
+		<link rel="manifest" crossorigin="use-credentials" href="%svelte.assets%/manifest.json" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%svelte.head%
 	</head>
 	<body>
 		<div>%svelte.body%</div>
+		<script src="https://storage.ko-fi.com/cdn/scripts/overlay-widget.js"></script>
+		<script>
+			kofiWidgetOverlay.draw('jacobroling', {
+				type: 'floating-chat',
+				'floating-chat.donateButton.text': 'Support me',
+				'floating-chat.donateButton.background-color': '#A5F3FC',
+				'floating-chat.donateButton.text-color': '#06B6D4'
+			});
+		</script>
 	</body>
 </html>
