--- a/src/app.html
+++ b/src/app.html
@@ -2,10 +2,14 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<meta name="description" content="" />
-		<link rel="icon" href="%svelte.assets%/assets/manifest-icon-192.maskable.png" />
-		<link rel="manifest" crossorigin="use-credentials" href="%svelte.assets%/manifest.json" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta
+			name="viewport"
+			content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no"
+		/>
+		<meta name="description" content="Description" />
+		<meta name="keywords" content="Web Developer, Jacob Roling, Adelaide, South Australia, Blog" />
+		<title>Jacob Roling - Web Developer</title>
 		%svelte.head%
 	</head>
 	<body>
